# 3dmath

./: .gitignore  CMakeLists.txt  Gemfile  README.md  _config.yml  index.markdown  latexToHtml.sh  pyproject.toml  pypublish  pypublish.sh
.github/workflows/: cmake-single-platform.yml
_posts/: 2023-07-31-welcome-to-jekyll.markdown
_sass/custom/: custom.scss
derivations/: RotationAboutArbitraryAxis.tex
docs/: Gemfile  _config.yml  about.markdown  index.markdown
docs/latex/: OrthographicProjectionMatrix.tex  RotationAboutArbitraryAxis.fls  RotationAboutArbitraryAxis.tex
docs/projection/: OrthographicProjection.md
docs/rotation/: RotationAboutX.md  RotationArbitraryAxis.md
docs/web/: LaTeXML.cache  OrthographicProjectionMatrix.html  OrthographicProjectionMatrix.xml  RotationAboutArbitraryAxis.html  RotationAboutArbitraryAxis.xml
include/3dmath/: Constants.h  IdentityMatrix.h  Line.h  LinearSystem.h  Matrix.h  MatrixOperations.h  MatrixUtil.h  OrthographicProjectionMatrix.h  OtherTypes.h  PolarCoordinates.h  ProjectionMatrix.h  Quaternion.h  RotationMatrix.h  ScaleMatrix.h  SupportingTypes.h  TypeAliases.h  Types.h  Utilities.h  Vector.h
include/3dmath/primitives/: ConvexPrimitive.h  Plane.h  Primitive.h  Ray.h  Sphere.h  Triangle.h
latex/: RotationAboutArbitraryAxis.aux  RotationAboutArbitraryAxis.fdb_latexmk
projection/: OrthographicProjection.md  index.md
py/: CMakeLists.txt  pyproject.toml
py/math3d/: math3d.cpp  math3d.pyi  matrix.hpp  types.hpp  vector.cpp  vector.hpp
py/test/: bounds.py
rotation/: RotationAboutY.md  RotationAboutZ.md  index.md
tests/: CMakeLists.txt  LinearSystem.cpp  Matrix.cpp  MatrixInverse.cpp  MatrixOperations.cpp  Plane.cpp  ProjectionMatrix.cpp  Quaternion.cpp  Ray.cpp  RotationMatrix.cpp  ScaleMatrix.cpp  Sphere.cpp  TestSupport.h  Triangle.cpp  Types.cpp  Vector.cpp  convex_primitive_test.cpp  line_test.cpp  matrix_test.cpp  plane_test.cpp  polar_coordinates_test.cpp  ray_test.cpp  sphere_test.cpp  types_test.cpp  vector_test.cpp
tests/baseline/: Sphere.stl  Xy.stl  Xz.stl  Yz.stl
tests/support/: PrimitivesTestSupport.h
web/: OrthographicProjectionMatrix.xml  RotatationAboutArbitraryAxis.xml  RotationAboutArbitraryAxis.html  RotationAboutArbitraryAxis.xml
